--- a/index.ipynb
+++ b/index.ipynb
@@ -47,8 +47,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def number_of_destinations(x):\n",
-    "    return len(c)"
+    "def number_of_destinations():\n",
+    "    return len(travel_destinations)"
    ]
   },
   {
