--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def next_u"
+    "def next_up():\n",
+    "    return"
    ]
   },
   {
