Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return"
+    "    return list_of_destinations[0]"
    ]
   },
   {
@@ -120,7 +120,7 @@
    ],
    "source": [
     "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
-    "# next_up() # 'argentina'"
+    "next_up() # 'argentina'"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "def favorite_destin"
    ]
   },
   {
