Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "favorite_destinations = []\n",
+    "def add_favorite_d"
    ]
   },
   {
