Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,7 +181,8 @@
    "outputs": [],
    "source": [
     "favorite_destinations = []\n",
-    "def add_favorite_d"
+    "def add_favorite_destination():\n",
+    "    favorite_destinations.append"
    ]
   },
   {
