--- a/index.ipynb
+++ b/index.ipynb
@@ -182,7 +182,8 @@
    "source": [
     "favorite_destinations = []\n",
     "def add_favorite_destination():\n",
-    "    favorite_destinations.append"
+    "    favorite_destinations.append('madagascar')\n",
+    "    return "
    ]
   },
   {
