--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -176,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "favorite_destinations = []\n",
     "def add_favorite_destination():\n",
     "    favorite_destinations.append('madagascar')\n",
-    "    return 'madagascar'"
+    "    return "
    ]
   },
   {
@@ -195,23 +195,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia', 'madagascar']\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'madagascar'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "favorite_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "add_favorite_destination()\n",
+    "# add_favorite_destination()\n",
     "favorite_destinations[-1] # 'madagascar'"
    ]
   },
@@ -229,7 +236,7 @@
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capi"
+    "# define function here"
    ]
   },
   {
