Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,8 @@
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capi"
+    "def capitalize_countries():\n",
+    "    for country in capitalized_destination"
    ]
   },
   {
