Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,8 @@
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    for country in capitalized_destination"
+    "    for country in capitalized_destinations:\n",
+    "        return list(country.)"
    ]
   },
   {
