Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,15 +224,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for country in capitalized_destinations:\n",
-    "        ccountry.title()\n",
-    "    return capitalized_destinations"
+    "        country = country.title()\n",
+    "        return capitalized_destinatio"
    ]
   },
   {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
