Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for country in capitalized_destinations:\n",
-    "        country.title()\n",
-    "        print\n",
-    "        return capitalized_destinations"
+    "        country = country.title()\n",
+    "        print(country)\n",
+    "    return capitalized_destinations"
    ]
   },
   {
@@ -245,16 +245,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "argentina\n",
+      "mexico\n",
+      "italy\n",
+      "finland\n",
+      "canada\n",
+      "croatia\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
