Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for country in capitalized_destinations:\n",
-    "        country = country.title()\n",
+    "        country.title()\n",
     "        print(country)\n",
-    "    return capitalized_destinations"
+    "    return country"
    ]
   },
   {
@@ -245,28 +245,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Argentina\n",
-      "Mexico\n",
-      "Italy\n",
-      "Finland\n",
-      "Canada\n",
-      "Croatia\n"
+      "argentina\n",
+      "mexico\n",
+      "italy\n",
+      "finland\n",
+      "canada\n",
+      "croatia\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
+       "'croatia'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
