--- a/index.ipynb
+++ b/index.ipynb
@@ -229,8 +229,8 @@
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "\n",
     "def capitalize_countries():\n",
+    "    capitalized_countries = \n",
     "    for country in capitalized_destinations:\n",
     "        country.title()\n",
     "        print(country)\n",
