--- a/index.ipynb
+++ b/index.ipynb
@@ -230,11 +230,10 @@
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized_countries = \n",
+    "    capitalized_countries = []\n",
     "    for country in capitalized_destinations:\n",
-    "        country.title()\n",
-    "        print(country)\n",
-    "    return country"
+    "        capitalized_countries.append(country.title())\n",
+    "    return capita\n"
    ]
   },
   {
